<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ecoatm.devicepickup.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="18dp"
            tools:context=".view.LoginFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ecoatm_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/device_pickup"
                    android:textColor="@color/green"
                    android:textSize="30sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <EditText
                android:id="@+id/userIdEditText"
                style="@style/InputTextStyle"
                android:layout_margin="8dp"
                android:hint="@string/enter_user_id"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:text="@{viewModel.userId}"
                app:textChangedListener="@{viewModel.userIdTextWatcher}" />

            <EditText
                android:id="@+id/pinEditText"
                style="@style/InputTextStyle"
                android:layout_margin="8dp"
                android:hint="@string/enter_PIN"
                android:inputType="numberPassword"
                android:imeOptions="actionDone"
                android:lines="1"
                android:text="@{viewModel.userPIN}"
                app:textChangedListener="@{viewModel.userPINTextWatcher}" />

            <CheckBox
                android:id="@+id/checkboxRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="8dp"
                android:checked="@{viewModel.rememberMe}"
                android:onCheckedChanged="@{() -> viewModel.rememberMeChanged()}"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/btnGo"
                style="@style/AppButtonStyle"
                android:layout_width="250dp"
                android:enabled="@{viewModel.btnGoEnable}"
                android:onClick="@{() -> viewModel.goPressed()}"
                android:text="@string/go_text" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@{viewModel.version}"
            android:textColor="@color/green" />

        <RelativeLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_opacity"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </RelativeLayout>
</layout>